--- a/css/style.css
+++ b/css/style.css
@@ -94,3 +94,36 @@ a {
     font-size: 1.5rem;
   }
 }
+
+/* Badges */
+
+.badge {
+  font-size: 2rem;
+  border-radius: 20px;
+  padding: 1.5rem 2rem;
+  font-weight: 600;
+}
+
+.badge--primary {
+  background-color: var(--color-primary);
+  color: #fff;
+}
+
+.badge--secondary {
+  background-color: var(--color-secondary);
+  color: #fff;
+}
+
+.badge-small {
+  font-size: 1.6rem;
+}
+
+@media screen and (min-width: 1024px) {
+  .badge {
+    font-size: 1.5rem;
+  }
+
+  .badge-small {
+    font-size: 1.2rem;
+  }
+}
