fix(component/badge): title typo

--- a/component/badge.html
+++ b/component/badge.html
@@ -10,7 +10,7 @@
     />
     <link rel="stylesheet" href="../css/normalize.css" />
     <link rel="stylesheet" href="../css/style.css" />
-    <title>Moshify - Link component</title>
+    <title>Moshify - Badge component</title>
   </head>
   <body>
     <span class="badge badge--primary">10% off</span>
