--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ html {
   --color-accent: #ff3400;
   --color-heading: #1b0760;
   --color-text-body: #918ca4;
+  --color-icon-background: #f3f9fa;
 }
 
 /* Typography */
@@ -155,4 +156,25 @@ a {
   .list--tick .list__item {
     padding-left: 0;
   }
+}
+
+/* Icons */
+
+.icon {
+  width: 40px;
+  height: 40px;
+}
+
+.icon--primary {
+  fill: var(--color-primary);
+}
+
+.icon-container {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--color-icon-background);
+  width: 64px;
+  height: 64px;
+  border-radius: 100%;
 }
