--- a/css/style.css
+++ b/css/style.css
@@ -178,3 +178,73 @@ a {
   height: 64px;
   border-radius: 100%;
 }
+
+/* Buttons */
+
+.button {
+  background-color: #fff;
+  border-radius: 40px;
+  border: 0;
+  color: #000;
+  font-size: 1.8rem;
+  font-weight: 600;
+  padding: 2rem 3rem;
+  text-align: center;
+  text-transform: uppercase;
+  transition: background-color 0.15s;
+  white-space: nowrap;
+  margin: 1rem 0;
+  outline: 0;
+}
+
+.button:hover {
+  cursor: pointer;
+}
+
+.button--block {
+  width: 100%;
+  display: inline-block;
+}
+
+.button--primary {
+  background-color: var(--color-primary);
+  color: #fff;
+}
+
+.button--primary:hover {
+  background-color: #348dff;
+}
+
+.button--accent {
+  background-color: var(--color-accent);
+  color: #fff;
+}
+
+.button--accent:hover {
+  background-color: #ff5c32;
+}
+
+.button--secondary {
+  background-color: var(--color-secondary);
+  color: #fff;
+}
+
+.button--secondary:hover {
+  background-color: #36e1ff;
+}
+
+.button--outlined {
+  border: 2px solid var(--color-heading);
+  color: var(--color-heading);
+}
+
+.button--outlined:hover {
+  background-color: var(--color-heading);
+  color: #fff;
+}
+
+@media screen and (min-width: 1024px) {
+  .button {
+    font-size: 1.5rem;
+  }
+}
