--- a/css/style.css
+++ b/css/style.css
@@ -297,3 +297,115 @@ a {
     font-size: 1.5rem;
   }
 }
+
+/* Cards */
+
+.card {
+  border: 1px solid var(--color-border);
+  border-radius: 10px;
+  box-shadow: 0 0 20px 10px #f3f3f3;
+  overflow: hidden;
+}
+
+.card__header,
+.card__body {
+  padding: 2rem 3rem;
+}
+
+.card--primary .card__header {
+  background-color: var(--color-primary);
+  color: #fff;
+}
+
+.card--secondary .card__header {
+  background-color: var(--color-secondary);
+  color: #fff;
+}
+
+/* plans */
+
+.plan__name {
+  color: #fff;
+  font-size: 2.4rem;
+  font-weight: 500;
+  margin: 0;
+}
+
+.plan__price {
+  font-size: 6rem;
+}
+
+.plan__billing-cycle {
+  font-size: 2.4rem;
+  opacity: 0.8;
+}
+
+.card--primary .badge--primary {
+  background-color: #126de4;
+  padding: 0.5rem 1rem;
+  margin-left: 1rem;
+}
+
+.card--secondary .badge--secondary {
+  background-color: #01cdf0;
+  padding: 0.5rem 1rem;
+  margin-left: 1rem;
+}
+
+.plan__description {
+  font-size: 2rem;
+  font-weight: 300;
+  display: block;
+  letter-spacing: 1px;
+}
+
+.plan .list__item {
+  font-size: 2.4rem;
+  letter-spacing: 1px;
+  margin-bottom: 2rem;
+}
+
+.plan .button {
+  margin-top: 4rem;
+}
+
+.plan--popular .card__header {
+  position: relative;
+}
+
+.plan--popular .plan__description {
+  color: #a7cdff;
+  opacity: 0.6;
+}
+
+.plan--popular .card__header::before {
+  content: url(../images/popular.svg);
+  width: 40px;
+  display: block;
+  position: absolute;
+  top: -4px;
+  right: 7%;
+}
+
+@media screen and (min-width: 1024px) {
+  .plan__name {
+    font-size: 1.4rem;
+  }
+
+  .plan__price {
+    font-size: 5rem;
+  }
+
+  .plan__billing-cycle {
+    font-size: 1.6rem;
+  }
+
+  .plan__description {
+    font-size: 1.7rem;
+  }
+
+  .plan .list__item {
+    margin-bottom: 1rem;
+    font-size: 1.8rem;
+  }
+}
