--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ html {
   --color-accent: #ff3400;
   --color-heading: #1b0760;
   --color-text-body: #918ca4;
+  --color-text-body-dark: #5c5577;
   --color-icon-background: #f3f9fa;
   --color-input-placeholder: #bab4ce;
   --color-border: #ccc;
@@ -421,14 +422,13 @@ a {
 }
 
 .media__image {
-  margin-top: 1.4rem;
+  margin-top: 1rem;
   fill: #237cf2;
 }
 
 .media__title {
   margin: 0;
   font-size: 2.4rem;
-  color: #fff;
 }
 
 .media__description {
@@ -436,4 +436,61 @@ a {
   color: #7b858b;
   font-size: 2rem;
   font-weight: 300;
+}
+
+/* Quotes */
+
+.quote {
+  font-size: 3rem;
+  font-style: italic;
+  color: var(--color-text-body-dark);
+  line-height: 1.3;
+}
+
+.quote__text::before {
+  content: open-quote;
+}
+
+.quote__text::after {
+  content: close-quote;
+}
+
+.quote .media__body {
+  margin: 0 1.5rem;
+}
+
+.quote__author {
+  font-size: 3rem;
+  font-style: normal;
+  font-weight: 500;
+  margin-bottom: 0;
+}
+
+.quote__company {
+  color: var(--color-heading);
+  opacity: 0.4;
+  font-size: 2rem;
+  font-style: normal;
+  font-weight: 300;
+}
+
+.quote__line {
+  position: relative;
+  bottom: 10px;
+  width: 52px;
+}
+
+@media screen and (min-width: 1024px) {
+  .quote {
+    font-size: 2rem;
+    line-height: 1.5;
+  }
+
+  .quote__author {
+    font-size: 2.4rem;
+  }
+
+  .quote__company {
+    font-size: 1.6rem;
+  }
 }
