--- a/component/grid.html
+++ b/component/grid.html
@@ -13,7 +13,7 @@
     <title>Moshify - Grid component</title>
   </head>
   <body>
-    <div class="grid grid-1x2">
+    <div class="grid grid--1x2">
       <div style="height: 100px; background-color: gold"></div>
       <div style="height: 100px; background-color: dodgerblue"></div>
       <div style="height: 100px; background-color: tomato"></div>
