--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ html {
   --color-icon-background: #f3f9fa;
   --color-input-placeholder: #bab4ce;
   --color-border: #ccc;
+  --color-body-dark: #232323;
 }
 
 /* Typography */
@@ -170,6 +171,10 @@ a {
 
 .icon--primary {
   fill: var(--color-primary);
+}
+
+.icon--white {
+  fill: #fff;
 }
 
 .icon-container {
@@ -625,4 +630,49 @@ a {
   .callout__content p {
     font-size: 2rem;
   }
+}
+
+/* Collapsible */
+
+.collapsible__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.collapsible h2 {
+  color: #fff;
+  margin-top: 0;
+  font-size: 3rem;
+  font-weight: 600;
+  letter-spacing: 2px;
+}
+
+.collapsible p {
+  color: #919191;
+}
+
+.collapsible__chevron {
+  transform: rotate(-90deg);
+  will-change: transform;
+  transition: transform 0.3s;
+}
+
+.collapsible__content {
+  /* display: none; */
+  max-height: 0;
+  opacity: 0;
+  will-change: max-height, opacity;
+  transition: max-height 0.3s, opacity 0.3s;
+}
+
+.collapsible--expanded .collapsible__chevron {
+  transform: rotate(0);
+}
+
+.collapsible--expanded .collapsible__content {
+  /* display: block; */
+  max-height: 100vh;
+  opacity: 1;
 }
