feat(component): add footer component

--- a/css/style.css
+++ b/css/style.css
@@ -641,7 +641,7 @@ a {
   margin-bottom: 1rem;
 }
 
-.collapsible h2 {
+.collapsible__heading {
   color: #fff;
   margin-top: 0;
   font-size: 3rem;
@@ -649,7 +649,7 @@ a {
   letter-spacing: 2px;
 }
 
-.collapsible p {
+.collapsible__description {
   color: #919191;
 }
 
@@ -730,5 +730,95 @@ a {
 @media screen and (min-width: 768px) {
   .testimonial__block-description {
     font-size: 2rem;
+  }
+}
+
+/* Footer */
+
+.footer {
+  background-color: #232323;
+}
+
+.footer a {
+  text-decoration: none;
+  color: #919191;
+  display: block;
+  margin-bottom: 2rem;
+  text-transform: capitalize;
+  transition: color 0.15s;
+}
+
+.footer a:hover {
+  color: #fff;
+}
+
+.footer .list {
+  margin: 0;
+}
+
+.footer__heading {
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+.footer__section {
+  border-bottom: 1px solid #393939;
+  padding: 2rem;
+}
+
+.footer__section.collapsible--expanded .collapsible__content {
+  margin-bottom: 5rem;
+}
+
+.footer__brand {
+  text-align: center;
+  margin-top: 5rem;
+}
+
+.footer__brand img {
+  width: 100%;
+  max-width: 230px;
+}
+
+.footer__copyright {
+  font-size: 2.1rem;
+  color: #fff;
+  opacity: 0.3;
+}
+
+@media screen and (min-width: 768px) {
+  .footer__sections {
+    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+  }
+
+  .footer .collapsible__chevron {
+    display: none;
+  }
+
+  .footer .collapsible__content {
+    opacity: 1;
+    max-height: 100vh;
+  }
+
+  .footer__heading {
+    font-size: 1.6rem;
+  }
+
+  .footer__section-content {
+    font-size: 1.5rem;
+  }
+
+  .footer__brand {
+    order: -1;
+    margin-top: 1rem;
+  }
+
+  .footer__copyright {
+    font-size: 1.5rem;
+  }
+
+  .footer__section {
+    border-bottom: none;
   }
 }
