--- a/component/collapsible.html
+++ b/component/collapsible.html
@@ -15,13 +15,13 @@
   <body style="background-color: #232323">
     <div class="collapsible">
       <header class="collapsible__header">
-        <h2>Item 1</h2>
+        <h2 class="collapsible__heading">Item 1</h2>
         <svg class="icon icon--white collapsible__chevron">
           <use xlink:href="../images/sprite.svg#chevron"></use>
         </svg>
       </header>
       <div class="collapsible__content">
-        <p>
+        <p class="collapsible__description">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat,
           suscipit ducimus
         </p>
@@ -29,13 +29,13 @@
     </div>
     <div class="collapsible collapsible--expanded">
       <header class="collapsible__header">
-        <h2>Item 1</h2>
+        <h2 class="collapsible__heading">Item 1</h2>
         <svg class="icon icon--white collapsible__chevron">
           <use xlink:href="../images/sprite.svg#chevron"></use>
         </svg>
       </header>
       <div class="collapsible__content">
-        <p>
+        <p class="collapsible__description">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat,
           suscipit ducimus
         </p>
