--- a/css/style.css
+++ b/css/style.css
@@ -878,3 +878,72 @@ a {
     margin-left: 4rem;
   }
 }
+
+/* Navbar */
+
+.navbar {
+  background-color: #000;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 0 1rem;
+}
+
+.navbar__list {
+  margin: 0;
+  width: 100%;
+  /* display: none; */
+}
+
+.navbar__list .navbar__item {
+  padding: 0.5rem 2rem;
+  border-bottom: 1px solid #222;
+}
+
+.navbar__item > a {
+  text-decoration: none;
+  color: #d2ced9;
+  transition: color 0.3s;
+}
+
+.navbar__item > a:hover {
+  color: #fff;
+}
+
+.navbar__menu-icon {
+  opacity: 0.5;
+  transition: box-shadow 0.3s;
+}
+
+.navbar__menu-icon:hover {
+  cursor: pointer;
+}
+
+.navbar.collapsible--expanded .navbar__menu-icon {
+  opacity: 1;
+  box-shadow: 0 0 0 5px #666;
+  border-radius: 5px;
+}
+
+.navbar__brand {
+  transform: translate3d(0, 5px, 0);
+}
+
+@media screen and (min-width: 768px) {
+  .navbar__menu-icon {
+    display: none;
+  }
+
+  .navbar__list {
+    display: flex;
+    width: auto;
+    max-height: 100vh;
+    opacity: 1;
+  }
+
+  .navbar__list .navbar__item {
+    font-size: 1.6rem;
+    border: 0;
+  }
+}
