--- a/component/input.html
+++ b/component/input.html
@@ -16,7 +16,7 @@
     <div class="input-group">
       <input type="text" class="input" placeholder="Enter a domain name ..." />
       <button class="button button--accent">
-        <svg class="icon">
+        <svg class="icon icon--white">
           <use xlink:href="../images/sprite.svg#search"></use>
         </svg>
         search
